--- a/Smartspend/app/src/main/res/layout/activity_settings.xml
+++ b/Smartspend/app/src/main/res/layout/activity_settings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#333333"
-    tools:context=".SettingsActivity">
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".Settings">
 
     <TextView
         android:id="@+id/settings_title"
@@ -15,11 +17,10 @@
         android:layout_marginTop="24dp"
         android:text="Settings"
         android:textColor="#FFFFFF"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:gravity="center"
+        android:layout_gravity="center_horizontal" />
 
     <CheckBox
         android:id="@+id/checkbox_notifications"
@@ -29,9 +30,8 @@
         android:textColor="#FFFFFF"
         android:layout_marginTop="16dp"
         android:buttonTint="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/settings_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_gravity="center_horizontal" />
+
 
     <CheckBox
         android:id="@+id/checkbox_biometric"
@@ -41,20 +41,27 @@
         android:textColor="#FFFFFF"
         android:layout_marginTop="8dp"
         android:buttonTint="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox_notifications"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_gravity="center_horizontal" />
 
-    <!-- Language Label and Spinner in Horizontal Layout -->
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox_biometric"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_gravity="center_horizontal">
 
+
+
+        <Spinner
+            android:id="@+id/spinner_language"
+            android:layout_width="158dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/spinner_background"
+            android:popupBackground="@color/black"
+            android:spinnerMode="dropdown"
+            android:entries="@array/language_array" />
     </LinearLayout>
 
 
@@ -64,11 +71,10 @@
         android:layout_height="wrap_content"
         android:text="View Profile"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="24dp"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_language"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal" />
 
 
     <Button
@@ -78,29 +84,9 @@
         android:layout_marginTop="72dp"
         android:backgroundTint="#31453a"
         android:text="Sign Out"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_profile"
+        android:textColor="#FFFFFF"
+        android:layout_gravity="center_horizontal"
         app:strokeColor="#70FFB5"
         app:strokeWidth="1dp" />
 
-    <Spinner
-        android:id="@+id/spinner_language"
-        android:layout_width="158dp"
-        android:layout_height="25dp"
-        android:background="@drawable/spinner_background"
-        android:popupBackground="@color/black"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="205dp" />
-
-    <TextView
-        android:id="@+id/language_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Language:"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="203dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
