--- a/Smartspend/app/src/main/res/layout/spinner_item.xml
+++ b/Smartspend/app/src/main/res/layout/spinner_item.xml
@@ -4,5 +4,5 @@
     android:layout_height="wrap_content"
     android:textColor="#FFFFFF"
     android:padding="8dp"
-    android:gravity="center_vertical"
-    android:textSize="16sp"/>
+    android:textSize="16sp"
+    />
