--- a/Smartspend/app/src/main/res/layout/dialog_add_category.xml
+++ b/Smartspend/app/src/main/res/layout/dialog_add_category.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,8 +5,9 @@
     android:layout_height="wrap_content"
     android:background="#272727"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"> <!-- Ensure padding is minimal and doesn't cause layout issues -->
 
+    <!-- Rest of your layout elements -->
     <!-- Category Name Input -->
     <EditText
         android:id="@+id/editTextCategoryName"
