--- a/Smartspend/app/src/main/res/layout/dialog_add_expense.xml
+++ b/Smartspend/app/src/main/res/layout/dialog_add_expense.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#1b1b1b"
-    >
+    android:layout_height="wrap_content"
+    android:background="#1b1b1b">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="24dp"
         android:text="New Expense"
         android:textColor="#FFFFFF"
-        android:textSize="40dp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -27,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/custom_edittext_green_border"
         android:gravity="center"
         android:hint="Expense Name"
@@ -38,18 +36,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
-    <EditText
-        android:id="@+id/category"
+    <Spinner
+        android:id="@+id/spinner_category"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/custom_edittext_green_border"
-        android:gravity="center"
-        android:hint="Category"
         android:padding="16dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/expenseName" />
@@ -59,28 +54,28 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/custom_edittext_green_border"
         android:gravity="center"
         android:hint="Amount"
         android:inputType="numberDecimal"
         android:padding="16dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
-        android:background="@drawable/custom_edittext_green_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/category" />
+        app:layout_constraintTop_toBottomOf="@id/spinner_category" />
 
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="64dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#31453a"
         android:padding="16dp"
         android:text="Confirm"
         android:textColor="#FFFFFF"
-        android:backgroundTint="#31453a"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
